--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -74,7 +74,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff;
+  background-color: limegreen;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
