--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 body {
-    background-color: limegreen;
+  background-color: limegreen;
 }
 
 h1 {
-    text-align: center;
-    color: white;
-    font-size: 5rem;
+  text-align: center;
+  color: white;
+  font-size: 5rem;
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
 }
